--- a/WPFOpgave2/WPFOpgave10.xaml
+++ b/WPFOpgave2/WPFOpgave10.xaml
@@ -1,12 +1,34 @@
-﻿<Window x:Class="WPFOpgave2.WPFOpgave10"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFOpgave2"
+        xmlns:TuinCommunity="clr-namespace:TuinCommunity;assembly=TuinCommunity" x:Class="WPFOpgave2.WPFOpgave10"
         mc:Ignorable="d"
-        Title="WPFOpgave10" Height="300" Width="300">
-    <Grid>
-        
+        Title="WPFOpgave10" Height="300" Width="500" Loaded="Window_Loaded" SizeToContent="Width">
+    <Window.Resources>
+        <CollectionViewSource x:Key="leverancierViewSource" d:DesignSource="{d:DesignInstance {x:Type TuinCommunity:Leverancier}, CreateList=True}"/>
+    </Window.Resources>
+    <DockPanel LastChildFill="true">
+        <Border Height="30" Background="white" BorderBrush="Black" BorderThickness="1" DockPanel.Dock="top">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Kies postnummer: " Width="150"></Label>
+                <ComboBox Name="PostcodeComboBox" Width="100" ItemsSource="{Binding}" DisplayMemberPath="Postcode"></ComboBox>
+            </StackPanel>
+        </Border>
+    <Grid DataContext="{StaticResource leverancierViewSource}">
+
+            <DataGrid x:Name="leverancierDataGrid" RowDetailsVisibilityMode="VisibleWhenSelected"  ItemsSource="{Binding}" EnableRowVirtualization="True" AutoGenerateColumns="False" Margin="0" >
+                <DataGrid.Columns>
+                    <DataGridTextColumn x:Name="leverancierNrColumn" Width="SizeToHeader" Header="Leverancier Nr" Binding="{Binding LeverancierNr}"/>
+                    <DataGridTextColumn x:Name="adresColumn" Width="150" Header="Adres" Binding="{Binding Adres}"/>             
+                    <DataGridTextColumn x:Name="naamColumn" Width="95" Header="Naam" Binding="{Binding Naam}"/>
+                    <DataGridTextColumn x:Name="postcodeColumn" Width="SizeToHeader" Header="Postcode" Binding="{Binding Postcode}"/>
+                    <DataGridTextColumn x:Name="woonplaatsColumn" Width="95.5" Header="Woonplaats" Binding="{Binding Woonplaats}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
     </Grid>
+    </DockPanel>
 </Window>
